# pyprotalign

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: compare_bio_gemmi.py
src/pyprotalign/: __init__.py  alignment.py  all_to_all.py  bio_utils.py  chain.py  cli.py  gemmi_utils.py  io.py  kabsch.py  metrics.py  refine.py  selection.py  tm_align.py  transform.py
tests/: test_alignment.py  test_alignment_coverage.py  test_bio_utils.py  test_chain.py  test_init.py  test_io.py  test_kabsch.py  test_metrics.py  test_refine.py  test_rmsd.py  test_selection.py  test_tm_align.py  test_transform.py
