[project]
name = "pyprotalign"
version = "0.3.0"
description = "Protein structure superposition package and CLI tool"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    { name = "Karl Gruber", email = "gammaturn@gmail.com" }
]
maintainers = [
    {name = "Karl Gruber", email = "gammaturn@gmail.com"},
]
keywords = ["protein structure", "superposition", "alignment", "structural bioinformatics", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.12"
dependencies = [
    "gemmi>=0.7.4",
    "numpy>=1.26",
]

[project.scripts]
protalign = "pyprotalign.cli:main"
protalign-all2all = "pyprotalign.all_to_all:main"

[project.urls]
Homepage = "https://github.com/ugSUBMARINE/pyprotalign"
Documentation = "https://github.com/ugSUBMARINE/pyprotalign#readme"
Repository = "https://github.com/ugSUBMARINE/pyprotalign.git"
"Bug Tracker" = "https://github.com/ugSUBMARINE/pyprotalign/issues"
Changelog = "https://github.com/ugSUBMARINE/pyprotalign/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "test_structures/",
    "tests/",
    "AGENTS.md",
    "TODOs.md",
    ".python-version",
    "uv.lock",
]

[dependency-groups]
dev = [
    "biopython>=1.86",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["pyprotalign"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/cli.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
